--- a/main.html
+++ b/main.html
@@ -8,6 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+	<div class="heading">
+		<h1>
+			Welcome to Accio Jobs!
+		</h1>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
