--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	
-	<div class="heading">
+	<div>
 		<h1>
 			Welcome to Accio Jobs!
 		</h1>
